--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.9.0
+  provider: ^6.1.5+1
+  shared_preferences: ^2.5.3
+  get_it: ^8.2.0
+  intl: ^0.20.2
+  flutter_screenutil: ^5.9.3
+  #  flutter_svg: ^2.2.1
+  table_calendar: ^3.2.0
+  carousel_slider: ^5.1.1
+  shimmer: ^3.0.0
+  #  flutter_signature_pad: ^3.0.1
+  path_provider: ^2.1.5
+  image: ^4.5.4
+  #  gallery_saver: ^2.3.2
+  flutter_signature_pad: ^3.0.1
+  #  gallery_saver: ^2.3.2
+  flutter_svg: ^2.0.9
+  #  image_gallery_saver: ^2.0.3
+  photo_manager: ^3.7.1
+  permission_handler: ^12.0.1
+  device_info_plus: ^12.2.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +81,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
