--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -10,6 +15,10 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
+
+            android:requestLegacyExternalStorage="true"
+            android:enableOnBackInvokedCallback="true"
+
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
