--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   photo_manager: ^3.7.1
   permission_handler: ^12.0.1
   device_info_plus: ^12.2.0
-
+  image_picker: ^1.2.1
 
 
 dev_dependencies:
